--- a/index.html
+++ b/index.html
@@ -1,245 +1,65 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Apolline</title>
-
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Poppins:200,300,400,500,600,700,800&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Lora:400,400i,700,700i&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Amatic+SC:400,700&display=swap" rel="stylesheet">
-
-    <!-- Stylesheets -->
-    <link rel="stylesheet" href="css/open-iconic-bootstrap.min.css">
-    <link rel="stylesheet" href="css/animate.css">
-    <link rel="stylesheet" href="css/owl.carousel.min.css">
-    <link rel="stylesheet" href="css/owl.theme.default.min.css">
-    <link rel="stylesheet" href="css/magnific-popup.css">
-    <link rel="stylesheet" href="css/aos.css">
-    <link rel="stylesheet" href="css/ionicons.min.css">
-    <link rel="stylesheet" href="css/bootstrap-datepicker.css">
-    <link rel="stylesheet" href="css/jquery.timepicker.css">
-    <link rel="stylesheet" href="css/flaticon.css">
-    <link rel="stylesheet" href="css/icomoon.css">
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body class="goto-here">
-    <div class="py-1 bg-primary">
-      <div class="container">
-        <div class="row no-gutters d-flex align-items-start align-items-center px-md-0">
-          <div class="col-lg-12 d-block">
-            <div class="row d-flex">
-              <div class="col-md pr-4 d-flex topper align-items-center">
-                <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-phone2"></span></div>
-                <span class="text">+971 44493069</span>
+<section class="ftco-section ftco-category ftco-no-pt">
+  <div class="container">
+    <div class="row">
+      <div class="col-md-8">
+        <div class="row">
+          <div class="col-md-6">
+            <div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url('images/category-2.jpg');">
+              <div class="text px-3 py-1">
+                <h2 class="mb-0"><a href="#">Juices</a></h2>
               </div>
-              <div class="col-md pr-4 d-flex topper align-items-center">
-                <div class="icon mr-2 d-flex justify-content-center align-items-center"><span class="icon-paper-plane"></span></div>
-                <span class="text">admin@apolline.ae</span>
+            </div>
+            <div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url('images/category.jpg');">
+              <div class="text px-3 py-1">
+                <h2 class="mb-0"><a href="#">Fruits</a></h2>
               </div>
-              <div class="col-md-5 pr-4 d-flex topper align-items-center text-lg-right">
-                <span class="text">3-5 Business days delivery & Free Returns</span>
+            </div>
+          </div>
+          <div class="col-md-6 order-md-last align-items-stretch d-flex">
+            <div class="category-wrap-2 ftco-animate img align-self-stretch d-flex" style="background-image: url('images/category-1.jpg');">
+              <div class="text text-center">
+                <h2>Vegetables</h2>
+                <p>Protect the health of every home</p>
               </div>
             </div>
           </div>
         </div>
       </div>
     </div>
+  </div>
+</section>
 
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-dark ftco_navbar bg-dark ftco-navbar-light" id="ftco-navbar">
+<section id="home-section" class="hero">
+  <div class="home-slider owl-carousel">
+    <div class="slider-item" style="background-image: url('images/bg_2.jpg');">
+      <div class="overlay"></div>
       <div class="container">
-        <a class="navbar-brand" href="index.html">Apolline General Trading L.L.C</a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#ftco-nav" aria-controls="ftco-nav" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="oi oi-menu"></span> Menu
-        </button>
-
-        <div class="collapse navbar-collapse" id="ftco-nav">
-          <ul class="navbar-nav ml-auto">
-            <li class="nav-item active"><a href="index.html" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="about.html" class="nav-link">About</a></li>
-            <li class="nav-item"><a href="contact.html" class="nav-link">Contact</a></li>
-          </ul>
-        </div>
-      </div>
-    </nav>
-
-    <!-- Hero Section -->
-    <section id="home-section" class="hero">
-      <div class="home-slider owl-carousel">
-        <div class="slider-item" style="background-image: url(images/AGT_BANNER.jpg);">
-          <div class="overlay"></div>
-          <div class="container">
-            <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true"></div>
-          </div>
-        </div>
-
-        <div class="slider-item" style="background-image: url(images/bg_1.jpg);">
-          <div class="overlay"></div>
-          <div class="container">
-            <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-              <div class="col-md-12 ftco-animate text-center">
-                <h1 class="mb-2">We serve Fresh Vegetables & Fruits</h1>
-                <h2 class="subheading mb-4">We deliver organic vegetables & fruits</h2>
-              </div>
-            </div>
-          </div>
-        </div>
-
-        <div class="slider-item" style="background-image: url(images/bg_2.jpg);">
-          <div class="overlay"></div>
-          <div class="container">
-            <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
-              <div class="col-sm-12 ftco-animate text-center">
-                <h1 class="mb-2">100% Fresh & Organic Foods</h1>
-                <h2 class="subheading mb-4">We deliver organic vegetables & fruits</h2>
-              </div>
-            </div>
+        <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+          <div class="col-sm-12 ftco-animate text-center">
+            <h1 class="mb-2">100% Fresh & Organic Foods</h1>
+            <h2 class="subheading mb-4">We deliver organic vegetables & fruits</h2>
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
-    <!-- Services Section -->
-    <section class="ftco-section">
+    <div class="slider-item" style="background-image: url('images/AGT_BANNER.jpg');">
+      <div class="overlay"></div>
       <div class="container">
-        <div class="row no-gutters ftco-services">
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-1 active d-flex justify-content-center align-items-center mb-2">
-                <span class="flaticon-shipped"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Free Shipping</h3>
-                <span>On order over AED 500</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-2 d-flex justify-content-center align-items-center mb-2">
-                <span class="flaticon-diet"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Always Fresh</h3>
-                <span>Products well packaged</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-3 d-flex justify-content-center align-items-center mb-2">
-                <span class="flaticon-award"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Superior Quality</h3>
-                <span>Quality Products</span>
-              </div>
-            </div>
-          </div>
-          <div class="col-md-3 text-center d-flex align-self-stretch ftco-animate">
-            <div class="media block-6 services mb-md-0 mb-4">
-              <div class="icon bg-color-4 d-flex justify-content-center align-items-center mb-2">
-                <span class="flaticon-customer-service"></span>
-              </div>
-              <div class="media-body">
-                <h3 class="heading">Support</h3>
-                <span>24/7 Support</span>
-              </div>
-            </div>
+        <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true">
+          <div class="col-md-12 ftco-animate text-center">
+            <h1 class="mb-2">We serve Fresh Vegetables & Fruits</h1>
+            <h2 class="subheading mb-4">We deliver organic vegetables & fruits</h2>
           </div>
         </div>
       </div>
-    </section>
+    </div>
 
-    <!-- Category Section -->
-    <section class="ftco-section ftco-category ftco-no-pt">
+    <div class="slider-item" style="background-image: url('images/bg_1.jpg');">
+      <div class="overlay"></div>
       <div class="container">
-        <div class="row">
-          <div class="col-md-8">
-            <div class="row">
-              <div class="col-md-6 order-md-last align-items-stretch d-flex">
-                <div class="category-wrap-2 ftco-animate img align-self-stretch d-flex" style="background-image: url(images/category.jpg);">
-                  <div class="text text-center">
-                    <h2>Vegetables</h2>
-                    <p>Protect the health of every home</p>
-                  </div>
-                </div>
-              </div>
-              <div class="col-md-6">
-                <div class="category-wrap ftco-animate img mb-4 d-flex align-items-end" style="background-image: url(images/category-1.jpg);">
-                  <div class="text px-3 py-1">
-                    <h2 class="mb-0"><a href="#">Fruits</a></h2>
-                  </div>
-                </div>
-                <div class="category-wrap ftco-animate img d-flex align-items-end" style="background-image: url(images/category-2.jpg);">
-                  <div class="text px-3 py-1">
-                    <h2 class="mb-0"><a href="#">Juices</a></h2>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
+        <div class="row slider-text justify-content-center align-items-center" data-scrollax-parent="true"></div>
       </div>
-    </section>
-
-    <!-- Footer -->
-    <footer class="ftco-footer ftco-section">
-      <div class="container">
-        <div class="row mb-5">
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-            <h2 class="ftco-heading-2">Apolline General Trading L.L.C</h2>
-            <p>We offer fresh, organic produce, and deliver it to your doorsteps in 3-5 business days.</p>
-            <ul class="ftco-footer-social list-unstyled">
-              <li class="ftco-animate"><a href="#"><span class="icon-facebook"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-twitter"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-instagram"></span></a></li>
-              <li class="ftco-animate"><a href="#"><span class="icon-youtube"></span></a></li>
-            </ul>
-          </div>
-          <div class="col-lg-2 col-md-6 mb-5 mb-md-0">
-            <h2 class="ftco-heading-2">Quick Links</h2>
-            <ul class="list-unstyled">
-              <li><a href="about.html" class="py-2 d-block">About Us</a></li>
-              <li><a href="contact.html" class="py-2 d-block">Contact</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-3 col-md-6 mb-5 mb-md-0">
-            <h2 class="ftco-heading-2">Help</h2>
-            <ul class="list-unstyled">
-              <li><a href="#" class="py-2 d-block">Shipping Info</a></li>
-              <li><a href="#" class="py-2 d-block">Returns & Exchanges</a></li>
-              <li><a href="#" class="py-2 d-block">Privacy Policy</a></li>
-            </ul>
-          </div>
-          <div class="col-lg-4 col-md-6">
-            <h2 class="ftco-heading-2">Contact Us</h2>
-            <ul class="list-unstyled">
-              <li><a href="tel:+97144493069" class="py-2 d-block">+971 44493069</a></li>
-              <li><a href="mailto:admin@apolline.ae" class="py-2 d-block">admin@apolline.ae</a></li>
-            </ul>
-          </div>
-        </div>
-        <div class="row">
-          <div class="col-md-12 text-center">
-            <p>&copy; 2024 Apolline General Trading L.L.C. All rights reserved.</p>
-          </div>
-        </div>
-      </div>
-    </footer>
-
-    <!-- Scripts -->
-    <script src="js/jquery.min.js"></script>
-    <script src="js/bootstrap.bundle.min.js"></script>
-    <script src="js/jquery.easing.1.3.js"></script>
-    <script src="js/owl.carousel.min.js"></script>
-    <script src="js/jquery.magnific-popup.min.js"></script>
-    <script src="js/aos.js"></script>
-    <script src="js/bootstrap-datepicker.js"></script>
-    <script src="js/jquery.timepicker.js"></script>
-    <script src="js/main.js"></script>
-
-  </body>
-</html>
+    </div>
+  </div>
+</section>
